[package]
name = "miniprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
btleplug = "0.11.5"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
image = "0.25.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
uuid = "1.8.0"
